--- a/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
+++ b/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
@@ -22,8 +22,8 @@
     "\n",
     "For more background about this problem, see:\n",
     "\n",
-    "* [\"Neuronlike Adaptive Elements That Can Solve Difficult Learning Control Problem\"](https://ieeexplore.ieee.org/document/6313077), AG Barto, RS Sutton, and CW Anderson, *IEEE Transactions on Systems, Man, and Cybernetics* (1983)\n",
-    "* [\"Cartpole - Introduction to Reinforcement Learning (DQN - Deep Q-Learning)\"](https://towardsdatascience.com/cartpole-introduction-to-reinforcement-learning-ed0eb5b58288), [Greg Surma](https://twitter.com/GSurma)"
+    "* [\"Neuronlike Adaptive Elements That Can Solve Difficult Learning Control Problem\"](https://ieeexplore.ieee.org/document/6313077), AG Barto, RS Sutton, and CW Anderson, *IEEE Transactions on Systems, Man, and Cybernetics* (1983). The same Sutton and Barto who wrote [*Reinforcement Learning: An Introduction*](https://mitpress.mit.edu/books/reinforcement-learning-second-edition).\n",
+    "* [\"Cartpole - Introduction to Reinforcement Learning (DQN - Deep Q-Learning)\"](https://towardsdatascience.com/cartpole-introduction-to-reinforcement-learning-ed0eb5b58288), [Greg Surma](https://twitter.com/GSurma)."
    ]
   },
   {
@@ -988,7 +988,7 @@
     "id": "Gp1LgeCJjGLk"
    },
    "source": [
-    "([image](../images/rllib/Cart-Pole-Episode-Rewards3.png))\n",
+    "([image](../../images/rllib/Cart-Pole-Episode-Rewards3.png))\n",
     "\n",
     "Also, print out the policy and model to see the results of training in detail…"
    ]
@@ -1112,7 +1112,7 @@
     }
    ],
    "source": [
-    "!RAY_ADDRESS=auto rllib rollout tmp/ppo/cart/checkpoint_7/checkpoint-7 \\\n",
+    "!RAY_ADDRESS=auto rllib rollout tmp/ppo/cart/checkpoint_10/checkpoint-10 \\\n",
     "    --config \"{\\\"env\\\": \\\"CartPole-v0\\\", \\\"model\\\": {\\\"fcnet_hiddens\\\": [100, 50]}}\" \\\n",
     "    --run PPO \\\n",
     "    --no-render \\\n",
@@ -1130,13 +1130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<video src=\"../images/rllib/Cart-Pole-Example-Video.mp4\" controls  >\n",
+       "<video src=\"../../images/rllib/Cart-Pole-Example-Video.mp4\" controls  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -1144,7 +1144,7 @@
        "<IPython.core.display.Video object>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
