--- a/ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb
+++ b/ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb
@@ -378,7 +378,7 @@
     "    max_state = max(max_state, state)\n",
     "    cumulative_reward += reward\n",
     "\n",
-    "print(f'Cumulative reward you've received is: {cumulative_reward}. Congratulations!')\n",
+    "print(f'Cumulative reward you received is: {cumulative_reward}. Congratulations!')\n",
     "print(f'Max state you visited is: {max_state}. This is out of {env.n} states.')"
    ]
   },
