--- a/ray-rllib/explore-rllib/solutions/Explore-RLlib-Solutions.ipynb
+++ b/ray-rllib/explore-rllib/solutions/Explore-RLlib-Solutions.ipynb
@@ -282,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('../..')\n",
+    "sys.path.append('..')\n",
     "from test_exercises import test_chain_env_spaces, test_chain_env_reward, test_chain_env_behavior\n",
     "from gym import spaces"
    ]
@@ -464,6 +464,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(If it fails to pass, rerun the previous cell.)\n",
+    "\n",
     "This may have taken you several tries. The key is to penalize action 1 (go back to the beginning), because you always get a small reward if you stay there, so there's a temptation to exploit that action and keep accruing the small reward until you hit the goal. Hence, this solution sets the reward to zero and instead returns `self.small_reward` for the action 0 when the state is `self.state < self.n - 1` (i.e., not at the right-hand end)."
    ]
   }
