Fixed TensorBoard instructions

--- a/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
+++ b/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
@@ -1163,7 +1163,7 @@
     "id": "tI9vJ1vU6Mj1"
    },
    "source": [
-    "Finally, launch [TensorBoard](https://ray.readthedocs.io/en/latest/rllib-training.html#getting-started) in a terminal window and open the URL printed to the output. Select the Cart Pole runs and visualize the key metrics from training with RLlib.\n",
+    "Finally, launch [TensorBoard](https://ray.readthedocs.io/en/latest/rllib-training.html#getting-started) as discussed in [02 Introduction to RLlib](../02-Introduction-to-RLlib.ipynb). Select the Cart Pole runs and visualize the key metrics from training with RLlib.\n",
     "\n",
     "```shell\n",
     "tensorboard --logdir=$HOME/ray_results\n",
