--- a/ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb
+++ b/ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb
@@ -34,7 +34,7 @@
     "Bandits, in their simplest form, are have two restrictions compared to general reinforcement learning:\n",
     "\n",
     "1. They do not attempt to learn the best actions to take for more than one state, which is either stationary or slowly evolving. \n",
-    "2. The action taken only affects the reward received, but not the next state of the environment."
+    "2. The action taken only affects the reward received, but not the next state of the environment. Recall from our [01 Introduction to Reinforcement Learning](../01-Introduction-to-Reinforcement-Learning.ipynb) lesson that RL is based on _Markov Decision Processes_, where the next state of the system is determined in part by the action taken."
    ]
   },
   {
@@ -60,7 +60,7 @@
     "\n",
     "While it's common in reinforcement learning to maximize **rewards**, we can also model the opposite of reward, called **regret**. Essentially, regret is the difference between the reward actually achieved and the best possible reward, if the algorithm could choose the best decision at every step.\n",
     "\n",
-    "The point of using a bandit is to try to _maximize average reward_. If the algorithm had perfect visibility into the dynamics of the environment, it would always choose the optimal arm to maximize the cummulative reward! However, that's not an interesting real-world problem to solve. Instead, we focus on the case where the algorithm only has limited visibility, so it cannot predict rewards. This means that the **exploitation vs. exploration tradeoff** is an essential aspect of bandits that is shared with general reinforcement learning systems. Pulling one arm repeatedly may provide an excellent reward, but other arms my provide even better rewards, especially as the context evolves.\n",
+    "The point of using a bandit is to try to _maximize average reward_. If the algorithm had perfect visibility into the dynamics of the environment, it would always choose the optimal arm to maximize the cumulative reward! However, that's not an interesting real-world problem to solve. Instead, we focus on the case where the algorithm only has limited visibility, so it cannot predict rewards. This means that the **exploitation vs. exploration tradeoff** is an essential aspect of bandits that is shared with general reinforcement learning systems. Pulling one arm repeatedly may provide an excellent reward, but other arms my provide even better rewards, especially as the context evolves.\n",
     "\n",
     "Even while the reward can't be predicted, some the exploration-exploitation strategies can place theoretical upper bounds on the regret. The use of machine learning to leverage the context and then minimize the regret in turn can provide good solutions. We'll explore this idea in the lessons."
    ]
@@ -85,7 +85,7 @@
     "* **State:** The state of the environment is its “context”.\n",
     "* **Action:** The decision taken, i.e., which arm is pulled.\n",
     "* **Agent:** Same as before; the agent decides what action to take, based on a policy for the environment.\n",
-    "* **Reward:** The observed reward received by taking the last action and the cummulative rewards for all actions.\n",
+    "* **Reward:** The observed reward received by taking the last action and the cumulative rewards for all actions.\n",
     "* **Regret:** The difference between the reward that could be achieved by always selecting the optimal arm and the reward actually achieved by the algorithm.\n",
     "* **Exploration/exploitation tradeoff:** Balancing when to exploit the best rewarding arm known vs. trying different choices to learn more about the possibility of even better rewards."
    ]
