--- a/ray-rllib/explore-rllib/04-Online-Learning-with-DQN.ipynb
+++ b/ray-rllib/explore-rllib/04-Online-Learning-with-DQN.ipynb
@@ -10,6 +10,13 @@
     "\n",
     "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
+    "> **WARNING:** This lesson is under development. Most of the code doesn't currently work."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This lesson demonstrates how to set up a server that simultaneously serves and learns a policy. We'll use the [Ray implementation](https://docs.ray.io/en/latest/rllib-algorithms.html#dqn) of the _Deep Q Networks_ (DQN) algorithm, which has better sample efficiency compared to PPO, by which we mean that the algorithm improves more quickly with each data sample. Hence, it learns a good policy from fewer \"experiences\".\n",
     "\n",
     "DQN was *the* first deep (neural network-based) RL algorithm, and is described in detail in the [original paper](https://arxiv.org/abs/1312.5602).\n",
