--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -74,7 +74,6 @@
     "| 01 | [Application - Cart Pole](explore-rllib/01-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
     "| 02 | [Application: Bipedal Walker](explore-rllib/02-Bipedal-Walker.ipynb) | Train a two-legged robot simulator. This is an optional lesson, due to the longer compute times required, but fun to try. |\n",
     "| 03 | [Custom Environments and Reward Shaping](explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
-    "| 04 | [Online Learning with DQN](explore-rllib/04-Online-Learning-with-DQN.ipynb) | How to set up a server that simultaneously serves and learns a policy. |\n",
     "\n",
     "Some additional examples you might explore can be found in the `extras` folder:\n",
     "\n",
@@ -119,22 +118,13 @@
     "\n",
     "* [Market Example](multi-armed-bandits/06-Market-Example.ipynb)\n",
     "\n",
-    "Next, return to the \"exploration\" lessons under `explore-rllib`:\n",
+    "Next, return to the \"exploration\" lessons under `explore-rllib` and work through as many of the following lessons as time permits:\n",
     "\n",
-    "Study the popular _CartPole_ example:\n",
+    "* [Application: Cart Pole](explore-rllib/03-Application-Cart-Pole.ipynb): Further exploration of the popular _CartPole_ example.\n",
+    "* [Application: Bipedal Walker](explore-rllib/04-Bipedal-Walker.ipynb): A nontrivial, but simplified robot simulator.\n",
+    "* [Custom Environments and Reward Shaping](explore-rllib/05-Custom-Environments-Reward-Shaping.ipynb): More about creating custom environments for your problem. Also, finetuning the rewards to ensure sufficient exploration.\n",
     "\n",
-    "* [Application: Cart Pole](explore-rllib/03-Application-Cart-Pole.ipynb)\n",
-    "\n",
-    "If you working through the lessons at your own pace (i.e., not in a class), work through the _Bipedal Walker_ example:\n",
-    "\n",
-    "* [Application: Bipedal Walker](explore-rllib/04-Bipedal-Walker.ipynb)\n",
-    "\n",
-    "Then finish the rest of the `ray-rllib` lessons:\n",
-    "\n",
-    "* [Custom Environments and Reward Shaping](explore-rllib/05-Custom-Environments-Reward-Shaping.ipynb)\n",
-    "* [Online Learning with DQN](explore-rllib/06-Online-Learning-with-DQN.ipynb)\n",
-    "\n",
-    "Other examples are provided for your use. See the `extras` directory for examples that work with other OpenAI Gym environments:\n",
+    "Other examples that use different OpenAI Gym environments are provided for your use in the `extras` directory:\n",
     "\n",
     "* [Extra: Application - Mountain Car](explore-rllib/extras/Extra-Application-Mountain-Car.ipynb)\n",
     "* [Extra: Application - Taxi](explore-rllib/extras/Extra-Application-Taxi.ipynb)\n",
