Start from checkpoint 100 for bipedal walker

--- a/ray-rllib/explore-rllib/02-Bipedal-Walker.ipynb
+++ b/ray-rllib/explore-rllib/02-Bipedal-Walker.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Reward is given for moving forward, a total of 300+ points up to the far end. If the robot falls, it gets -100. Applying motor torque costs a small amount of points, so a more optimal agent that minimizes torque application will get a better score. The state consists of the hull angle speed, angular velocity, horizontal speed, vertical speed, position of joints, joints angular speed, legs contact with ground, and 10 LIDAR rangefinder measurements. There are no coordinates in the state vector.\n",
     "\n",
-    "This notebook is offered as a \"homework\" exercise, as more computation is required to make it work. However, we provide a checkpoint from previous training episodes, which will accelerate your efforts somewhat. Even working through this notebook as is, you'll see good results. However, consider iterating on the neural network structure and run more training iterations. How well can you train the walker?"
+    "This notebook requires more computation than the other lessons to achieve a well-trained policy. However, to make it faster, we provide a checkpoint from previous training episodes, which will accelerate your efforts somewhat. Even starting with the provided checkpoint, you'll see good results. However, consider iterating on the neural network structure and run more training iterations. How well can you train the walker?"
    ]
   },
   {
@@ -155,7 +155,8 @@
    "outputs": [],
    "source": [
     "SELECT_ENV = \"BipedalWalker-v3\"                 # Specifies the OpenAI Gym environment\n",
-    "N_ITER = 50                                     # Number of training runs.\n",
+    "N_ITER = 20                                     # Number of training runs. We'll only do 20 because this is compute intensive.\n",
+    "                                                # If you have a powerful machine or cluster or more time, try a bigger number like 50 or 100!\n",
     "\n",
     "config = ppo.DEFAULT_CONFIG.copy()              # PPO's default configuration. See the next code cell.\n",
     "config[\"log_level\"] = \"WARN\"                    # Suppress too many messages, but try \"INFO\" to see what can be printed.\n",
@@ -187,6 +188,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Note:** If you get warnings like _WARN: Box bound precision lowered by casting to float32_, you can safely ignore them. They come from the definitions in the Bipedal Walker environment for state and action spaces where 32-bit floats are used instead of 64-bit."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -199,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Restore from a previously-captured checkpoint:"
+    "Restore from a previously-captured checkpoint, after training for 100 iterations:"
    ]
   },
   {
@@ -208,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent.restore('bipedal-walker-checkpoint/checkpoint-50')"
+    "agent.restore('bipedal-walker-checkpoint/checkpoint-100')"
    ]
   },
   {
@@ -217,7 +225,7 @@
    "source": [
     "Train for an additional `N_ITER` iterations. \n",
     "\n",
-    "> **Note:** This can take a long time. Consider using a smaller value for `N_ITER`, like 20, if you are on a slow machine or cloud instance."
+    "> **Note:** Depending on the machine or cluster you are running on, this can take a long time. If you are on a powerful laptop or running in a cluster, or you don't mind waiting, try using a larger value for `N_ITER`."
    ]
   },
   {
@@ -283,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are the results training from training runs 51-100:"
+    "Here are the results training starting from the iteration-100 checkpoint and training for an additional `N_ITER` iterations:"
    ]
   },
   {
@@ -303,13 +311,29 @@
     "id": "Gp1LgeCJjGLk"
    },
    "source": [
-    "([image](../../images/rllib/Bipedal-Walker-Rewards-100.png) after 100 training runs)\n",
+    "([image](../../images/rllib/Bipedal-Walker-Rewards-120.png))\n",
     "\n",
-    "Compare with this image after 50 runs:\n",
+    "Compare with these images after 50 and 100 iterations. Note the sign of the `reward` in all graphs!\n",
+    "\n",
+    "After 100 iterations, starting from a checkpoint at 50 (so 50 _new_ iterations):\n",
+    "\n",
+    "![image](../../images/rllib/Bipedal-Walker-Rewards-100.png)\n",
+    "\n",
+    "After the first 50 iterations:\n",
     "\n",
     "![image](../../images/rllib/Bipedal-Walker-Rewards-50.png)\n",
     "\n",
-    "Also, print out the policy and model to see the results of training in detail…"
+    "By 100 iterations, the reward has mostly leveled off."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "Gp1LgeCJjGLk"
+   },
+   "source": [
+    "Let's print out the policy and model to see the results of training in detail…"
    ]
   },
   {
@@ -398,9 +422,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise (\"Homework\")\n",
+    "## Exercise 1 (\"Homework\")\n",
     "\n",
-    "In addition to _Cart Pole_, _Bipedal Walker_, and _Mountain Car_, there are other so-called [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples you can try. Make a copy of this notebook and edit as required."
+    "Try a long training run while you do other work. Increase `N_ITER` above to some large number. When it finishes, change the `rllib rollout` command to use the last checkpoint. How well does it run? \n",
+    "\n",
+    "Redo the experiment a few times. You might increase `N_ITER`. For each run, load the last checkpoint that was saved in the previous run. How well can you train the walker?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 (\"Homework\")\n",
+    "\n",
+    "In addition to _Cart Pole_, _Bipedal Walker_, and _Mountain Car_ (see the `extras` folder), there are other so-called [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples you can try. Make a copy of this notebook and edit as required."
    ]
   }
  ],
