Fixed bug in async actor example and a typo

--- a/advanced-ray/02-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Actors-Revisited.ipynb
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counter = Counter.options(name=\"Counter1\", detached=True).remote()"
+    "counter = Counter.options(name=\"Counter1\").remote()"
    ]
   },
   {
@@ -142,14 +142,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To kill a detached actor, use `ray.kill()`\n",
-    "\n",
-    "```python\n",
-    "c = ray.util.get_actor(\"Counter1\")\n",
-    "ray.kill(c)\n",
-    "```\n",
-    "\n",
-    "We won't do this now, as we'll use this actor later."
+    "To kill a detached actor, use `ray.kill()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.kill(c)"
    ]
   },
   {
@@ -456,7 +458,7 @@
    "source": [
     "## Exercise 4 - \"Homework\"\n",
     "\n",
-    "This exercise is more involved and will mostly appeal to those of you who like the challenges of optimizing low-level performance. Also, for a live toturial event, this exercise is too much to take on in the limite time available. That's why it's labelled _Homework_. I encourage you to read the solution though."
+    "This exercise is more involved and will mostly appeal to those of you who like the challenges of optimizing low-level performance. Also, for a live tutorial event, this exercise is too much to take on in the limite time available. That's why it's labelled _Homework_. I encourage you to read the solution though."
    ]
   },
   {
