Tweaked example sizes for better VM results

--- a/ray-crash-course/01-Ray-Tasks.ipynb
+++ b/ray-crash-course/01-Ray-Tasks.ipynb
@@ -255,7 +255,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ns = [10000, 50000, 100000, 500000, 1000000, 5000000, 10000000]"
+    "Ns = [10000, 50000, 100000, 500000, 1000000] #, 5000000, 10000000]  # Larger values take a long time on small VMs and machines!\n",
+    "maxN = Ns[-1]\n",
+    "maxN"
    ]
   },
   {
@@ -291,7 +293,7 @@
    "source": [
     "The next cell will take many seconds to complete (depending on your setup). As soon as it starts, switch to the Ray Dashboard you opened above. Notice the total CPU and memory utilizations at the top while the cell runs. \n",
     "\n",
-    "> **Tip:** If the large N values are very slow, it may be insufficient memory. Consider removing the largest values from `Ns` above if you are on a machine with limited resources."
+    "> **Tip:** If all the following trials finish in under a few seconds for the largest `n` value in `Ns` and the largest number of trials, consider changing `Ns` above to add larger values."
    ]
   },
   {
@@ -309,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_trials = [try_it(10000000, trials) for trials in range(5,20,2)]"
+    "data_trials = [try_it(maxN, trials) for trials in range(5,20,2)]"
    ]
   },
   {
@@ -443,7 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray_data_trials = [ray_try_it(10000000, trials) for trials in range(5,20,2)]"
+    "ray_data_trials = [ray_try_it(maxN, trials) for trials in range(5,20,2)]"
    ]
   },
   {
@@ -500,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(If you can't see it, click [here](../images/Pi-Ns-vs-times-linear.png).)\n",
+    "(If you can't see it, click [here](../images/Pi-Ns-vs-times-linear.png). Note that this image is from a run that included the larger values for `N` that are commented out in the definition of `Ns` above.)\n",
     "\n",
     "For relatively small `N` values, the performance overhead of overhead of Ray is a larger percentage of the calculation, so the overall performance benefit is less. However, as `N` increases, the advantage of Ray increases. Both plots are roughly-linear, because we are CPU bound, but Ray's execution time/N is lower. On a full cluster, the times could be dramatically better for larger `N`. \n",
     "\n",
